--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,17 +3,18 @@ phases:
   install:
     commands:
       # Install all dependencies (including dependencies for running tests)
-      - npm install
+      - npm install pnpm
+      - pnpm i
   pre_build:
-    commands:
-      # Discover and run unit tests in the '__tests__' directory
-      - npm run test
-      # Remove all dependencies not needed for the Lambda deployment package (the packages from devDependencies in package.json)
+    # commands:
+    #   # Discover and run unit tests in the '__tests__' directory
+    #   - npm run test
+    #   # Remove all dependencies not needed for the Lambda deployment package (the packages from devDependencies in package.json)
       - npm prune --production
   build:
     commands:
       # Use AWS SAM to package the application by using AWS CloudFormation
-      - aws cloudformation package --template template.yml --s3-bucket $S3_BUCKET --output-template-file template-export.yml
-artifacts:
-  files:
-    - template-export.yml
+      - aws cloudformation package --template template.yml --s3-bucket $S3_BUCKET
+# artifacts:
+#   files:
+#     - template-export.yml
