Still figuring out how to work with template Next step - implement google sign in

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,10 +6,10 @@ phases:
       - npm install pnpm
       - pnpm i
   pre_build:
-    # commands:
-    #   # Discover and run unit tests in the '__tests__' directory
-    #   - npm run test
-    #   # Remove all dependencies not needed for the Lambda deployment package (the packages from devDependencies in package.json)
+    commands:
+      # # Discover and run unit tests in the '__tests__' directory
+      # - npm run test
+      # # Remove all dependencies not needed for the Lambda deployment package (the packages from devDependencies in package.json)
       - npm prune --production
   build:
     commands:
