Can't import modules to lambda?

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,8 +3,7 @@ phases:
   install:
     commands:
       # Install all dependencies (including dependencies for running tests)
-      - npm install pnpm
-      - pnpm i
+      - npm install
   pre_build:
     commands:
       # # Discover and run unit tests in the '__tests__' directory
