--- a/template.yml
+++ b/template.yml
@@ -24,64 +24,64 @@ Globals:
     PermissionsBoundary: !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/${AppId}-${AWS::Region}-PermissionsBoundary'
     Runtime: nodejs16.x
     Timeout: 250
-    CodeUri: ./
-  Api:
-    Cors:
-      AllowMethods: "'GET, POST'"
-      AllowOrigin: "'//localhost:*/'"
+    # CodeUri: ./
+  # Api:
+  #   Cors:
+  #     AllowMethods: "'GET, POST'"
+  #     AllowOrigin: "'//localhost:*/'"
       # AllowHeaders: "'X-JS-Origin'"
 
 # Resources declares the AWS resources that you want to include in the stack
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/resources-section-structure.html
-Resources:
-  # Each Lambda function is defined by properties:
-  # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+# Resources:
+#   # Each Lambda function is defined by properties:
+#   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
-  # This is a Lambda function config associated with the source code: hello-from-lambda.js
-  operatorPage:
-    Type: AWS::Serverless::Function
-    Properties:
-      Handler: src/operator.page
-      MemorySize: 4096
-      Events:
-        API:
-          Type: Api
-          Properties:
-            Path: /
-            Method: get
-      Description: A Lambda function that returns a static string.
-      Policies:
-        - AWSLambdaBasicExecutionRole
+#   # This is a Lambda function config associated with the source code: hello-from-lambda.js
+#   operatorPage:
+#     Type: AWS::Serverless::Function
+#     Properties:
+#       Handler: src/operator.page
+#       MemorySize: 4096
+#       Events:
+#         API:
+#           Type: Api
+#           Properties:
+#             Path: /
+#             Method: get
+#       Description: A Lambda function that returns a static string.
+#       Policies:
+#         - AWSLambdaBasicExecutionRole
 
-  checkLogin:
-    Type: AWS::Serverless::Function
-    Properties:
-      Handler: src/operator.checkLogin
-      MemorySize: 4096
-      Events:
-        API:
-          Type: Api
-          Properties:
-            Path: /auth
-            Method: get
-      Description: A Lambda function that returns a static string.
-      Policies:
-        - AWSLambdaBasicExecutionRole
+#   checkLogin:
+#     Type: AWS::Serverless::Function
+#     Properties:
+#       Handler: src/operator.checkLogin
+#       MemorySize: 4096
+#       Events:
+#         API:
+#           Type: Api
+#           Properties:
+#             Path: /auth
+#             Method: get
+#       Description: A Lambda function that returns a static string.
+#       Policies:
+#         - AWSLambdaBasicExecutionRole
 
-  loginClient:
-    Type: AWS::Serverless::Function
-    Properties:
-      Handler: src/operator.loginClient
-      MemorySize: 4096
-      Events:
-        API:
-          Type: Api
-          Properties:
-            Path: /auth
-            Method: post
-      Description: A Lambda function that returns a static string.
-      Policies:
-        - AWSLambdaBasicExecutionRole
+#   loginClient:
+#     Type: AWS::Serverless::Function
+#     Properties:
+#       Handler: src/operator.loginClient
+#       MemorySize: 4096
+#       Events:
+#         API:
+#           Type: Api
+#           Properties:
+#             Path: /auth
+#             Method: post
+#       Description: A Lambda function that returns a static string.
+#       Policies:
+#         - AWSLambdaBasicExecutionRole
 
   helloFromLambdaFunction:
     Type: AWS::Serverless::Function
