--- a/template copy.yml
+++ b/template copy.yml
@@ -4,8 +4,11 @@
 # The AWSTemplateFormatVersion identifies the capabilities of the template
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/format-version-structure.html
 AWSTemplateFormatVersion: 2010-09-09
-Description: >-
-  Start from scratch starter project
+Description: |
+  Backend for Team 75 RoboRaiders Website.
+  Backend developed by Eshaan Debnath.
+  Frontend developed by Aditya Kalavala and Eshaan Debnath.
+
 # Transform section specifies one or more macros that AWS CloudFormation uses to process your template
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/transform-section-structure.html
 Transform: AWS::Serverless-2016-10-31
@@ -19,10 +22,14 @@ Globals:
     # it has to be manually updated when you add resources to your application.
     # More information in https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies_boundaries.html
     PermissionsBoundary: !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/${AppId}-${AWS::Region}-PermissionsBoundary'
-
-Parameters:
-  AppId:
-    Type: String
+    Runtime: nodejs16.x
+    Timeout: 250
+    CodeUri: ./
+  Api:
+    Cors:
+      AllowMethods: "'GET, POST'"
+      AllowOrigin: "'//localhost:*/'"
+      # AllowHeaders: "'X-JS-Origin'"
 
 # Resources declares the AWS resources that you want to include in the stack
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/resources-section-structure.html
@@ -31,15 +38,63 @@ Resources:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
   # This is a Lambda function config associated with the source code: hello-from-lambda.js
+  operatorPage:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: src/operator.page
+      MemorySize: 4096
+      Events:
+        API:
+          Type: Api
+          Properties:
+            Path: /
+            Method: get
+      Description: A Lambda function that returns a static string.
+      Policies:
+        - AWSLambdaBasicExecutionRole
+
+  checkLogin:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: src/operator.checkLogin
+      MemorySize: 4096
+      Events:
+        API:
+          Type: Api
+          Properties:
+            Path: /auth
+            Method: get
+      Description: A Lambda function that returns a static string.
+      Policies:
+        - AWSLambdaBasicExecutionRole
+
+  loginClient:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: src/operator.loginClient
+      MemorySize: 4096
+      Events:
+        API:
+          Type: Api
+          Properties:
+            Path: /auth
+            Method: post
+      Description: A Lambda function that returns a static string.
+      Policies:
+        - AWSLambdaBasicExecutionRole
+
   helloFromLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: ./
-      Handler: src/auth.test
-      Runtime: nodejs16.x
+      CodeUri: ./src/
+      Handler: auth.test
       MemorySize: 128
-      Timeout: 60
+      Events:
+        API:
+          Type: Api
+          Properties:
+            Path: /myresource
+            Method: get
       Description: A Lambda function that returns a static string.
       Policies:
-        # Give Lambda basic execution Permission to the helloFromLambda
         - AWSLambdaBasicExecutionRole
