--- a/template.yml
+++ b/template.yml
@@ -22,14 +22,10 @@ Globals:
     # it has to be manually updated when you add resources to your application.
     # More information in https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies_boundaries.html
     PermissionsBoundary: !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/${AppId}-${AWS::Region}-PermissionsBoundary'
-    Runtime: nodejs16.x
-    Timeout: 250
-    CodeUri: ./
-  Api:
-    Cors:
-      AllowMethods: "'GET, POST'"
-      AllowOrigin: "'//localhost:*/'"
-      # AllowHeaders: "'X-JS-Origin'"
+
+Parameters:
+  AppId:
+    Type: String
 
 # Resources declares the AWS resources that you want to include in the stack
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/resources-section-structure.html
@@ -38,57 +34,14 @@ Resources:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
   # This is a Lambda function config associated with the source code: hello-from-lambda.js
-  # operatorPage:
-  #   Type: AWS::Serverless::Function
-  #   Properties:
-  #     Handler: src/operator.page
-  #     MemorySize: 4096
-  #     Events:
-  #       API:
-  #         Type: Api
-  #         Properties:
-  #           Path: /
-  #           Method: get
-  #     Description: A Lambda function that returns a static string.
-  #     Policies:
-  #       - AWSLambdaBasicExecutionRole
-
-  # checkLogin:
-  #   Type: AWS::Serverless::Function
-  #   Properties:
-  #     Handler: src/operator.checkLogin
-  #     MemorySize: 4096
-  #     Events:
-  #       API:
-  #         Type: Api
-  #         Properties:
-  #           Path: /auth
-  #           Method: get
-  #     Description: A Lambda function that returns a static string.
-  #     Policies:
-  #       - AWSLambdaBasicExecutionRole
-
-  # loginClient:
-  #   Type: AWS::Serverless::Function
-  #   Properties:
-  #     Handler: src/operator.loginClient
-  #     MemorySize: 4096
-  #     Events:
-  #       API:
-  #         Type: Api
-  #         Properties:
-  #           Path: /auth
-  #           Method: post
-  #     Description: A Lambda function that returns a static string.
-  #     Policies:
-  #       - AWSLambdaBasicExecutionRole
-
   helloFromLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: ./src/
       Handler: auth.test
       MemorySize: 128
+      Runtime: nodejs16.x
+      Timeout: 60
       Events:
         API:
           Type: Api
