--- a/template.yml
+++ b/template.yml
@@ -41,7 +41,51 @@ Resources:
   # Each Lambda function is defined by properties:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
-  # This is a Lambda function config associated with the source code: hello-from-lambda.js
+  operatorPage:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: src/operator.page
+      MemorySize: 512
+      Events:
+        API:
+          Type: Api
+          Properties:
+            Path: /
+            Method: get
+      Description: A Lambda function that returns a static string.
+      Policies:
+        - AWSLambdaBasicExecutionRole
+
+  checkLogin:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: src/operator.checkLogin
+      MemorySize: 512
+      Events:
+        API:
+          Type: Api
+          Properties:
+            Path: /auth
+            Method: get
+      Description: A Lambda function that returns a static string.
+      Policies:
+        - AWSLambdaBasicExecutionRole
+
+  loginClient:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: src/operator.loginClient
+      MemorySize: 512
+      Events:
+        API:
+          Type: Api
+          Properties:
+            Path: /auth
+            Method: post
+      Description: A Lambda function that returns a static string.
+      Policies:
+        - AWSLambdaBasicExecutionRole
+
   helloFromLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
