--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "private": true,
     "scripts": {},
     "dependencies": {
+        "@aws-sdk/client-dynamodb": "^3.338.0",
+        "aws-sdk": "^2.1385.0",
         "googleapis": "^118.0.0",
         "randomstring": "^1.2.3",
         "uuid": "^9.0.0"
